feat: add win mode

--- a/app/render/pages/index.html
+++ b/app/render/pages/index.html
@@ -16,6 +16,7 @@
   <label for="wait">等待时长（单位：ms）</label><br>
   <input id="wait" type="number" placeholder="访问地址后等待的时长，与网速有关" value="1000"/><br>
   <br>
+  <input id="open" type="submit" value="选择文件存储位置" /><br>
   <br>
   <button id="start">开始监测</button><br>
   <div id="log"></div>
